2006-02-04  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Remove trailing whitespace from makefiles.
	
	* flower/include/std-vector.hh: Add binary_search_bounds workaround
	for earlier gcc.

	* .cvsignore: Add out*, out-www, config-*.  Remove lots of cruft.

	* flower/include/std-vector.hh[!HAVE_STL_DATA_METHOD]: Workaround.

	* config.hh.in (HAVE_STL_DATA_METHOD): Add.

	* stepmake/aclocal.m4 (STEPMAKE_STL_DATA_METHOD): New function.

	* configure.in: Use it.

2006-02-04  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/music-functions.scm (pitch-of-note): new function.

	* ly/music-functions-init.ly: add \octave and \addquote

	* lily/parser.yy (music_function_chord_body): softcode \octave.
	(lilypond_header): softcode \addquote

2006-02-03  Jan Nieuwenhuizen  <janneke@gnu.org>

	* flower/include/std-vector.hh[STD_VECTOR]: Do not include
	array.hh, parray.hh at all.  Getting ready to flip the
	configure default.

	* lily/include/lily-proto.hh (Link_array__char_): Bugfix.

	* lily/source-file.cc (file::get_line): Help binary_search_bounds
	a bit.

	* lily/include/lily-proto.hh (Link_array__char_): Bugfix.

2006-02-03  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* flower/include/array.hh: typo. 

2006-02-02  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/advanced-notation.itely: doc "\#" in text.

2006-02-03  Jan Nieuwenhuizen  <janneke@gnu.org>

	* flower/include/pqueue.hh: Derive from std::vector.

	* flower/include/parray.hh: Conform to std::vector interface.
	Update users.

2006-02-02  Graham Percival  <gpermus@gmail.com>

	* Documentation/topdocs/NEWS.itely: grammar fix from Laura.

2006-02-02  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* flower/file-path.cc (is_file): remove if 0 section.

	* buildscripts/pfx2ttf.fontforge (err): robustness fix for
	selecting afii61352.

2006-02-02  Jan Nieuwenhuizen  <janneke@gnu.org>

	* flower/include/std-vector.hh (boundary): Oops, reverse.

	* flower/string-convert.cc (convert::unsigned_string): Bugfix: