@@ -15,9 +15,10 @@
 class Hara_kiri_group_spanner
 {
 public:
-  DECLARE_SCHEME_CALLBACK (force_hara_kiri_callback, (SCM, SCM));
+  DECLARE_SCHEME_CALLBACK (force_hara_kiri_callback, (SCM));
   DECLARE_SCHEME_CALLBACK (y_extent, (SCM smob));
-  DECLARE_SCHEME_CALLBACK (force_hara_kiri_in_parent_callback, (SCM, SCM));
+  DECLARE_SCHEME_CALLBACK (force_hara_kiri_in_y_parent_callback, (SCM));
+  DECLARE_SCHEME_CALLBACK (after_line_breaking, (SCM));
   static bool has_interface (Grob *);
   static void consider_suicide (Grob *me);
   static void add_interesting_item (Grob *me, Grob *n);
