@@ -1,3 +1,15 @@
+2006-02-05  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* lily/instrument-name-engraver.cc (stop_translation_timestep):
+	hack: add to axis group if not added yet. This fixes hara kiri'd
+	piano staves.
+
+	* lily/hara-kiri-group-spanner.cc
+	(force_hara_kiri_in_y_parent_callback): fix signatures.
+
+	* lily/hairpin.cc (print): check next hairpin to see whether or
+	not to be continuing.
+
 2006-02-04  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* Remove trailing whitespace from makefiles.
